WIP simplify to calling PokeApi first

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokematch Card Game</title>
   </head>
-  <body></body>
+  <body>
+    <main ng-app="PokeMatchApp">
+      <section
+        class="container"
+        ng-controller="MatchController as matchCtrl"
+      ></section>
+    </main>
+  </body>
 </html>
