Use angularJS from CDN

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <!-- Libraries -->
-    <script src="/node_modules/angular/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://unpkg.com/@uirouter/angularjs@1.0.29/release/angular-ui-router.js"></script>
 
     <!-- PokeMatchApp Module -->
