WIP add timer end on 0, adjust styling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </script>
 
     <main ng-app="PokeMatchApp" ng-controller="GameController as gameCtrl">
-      <ui-view></ui-view>
+      <ui-view class="game-container container"></ui-view>
     </main>
 
     <!-- Libraries -->
