Download Angular libs and Bootstrap instead of using CDN

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
     />
 
     <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="src/styling/bootstrap.min.css" />
     <link rel="stylesheet" href="src/styling/styles.css" />
     <title>Pokematch Card Game</title>
   </head>
@@ -60,8 +55,8 @@
     </main>
 
     <!-- Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="https://unpkg.com/@uirouter/angularjs@1.0.29/release/angular-ui-router.js"></script>
+    <script src="src/lib/angular.min.js"></script>
+    <script src="src/lib/angular-ui-router.js"></script>
 
     <!-- PokeMatchApp Module -->
     <script src="src/modules/poke-match.module.js"></script>
